--- a/.github/workflows/.github-action.yaml
+++ b/.github/workflows/.github-action.yaml
@@ -1,14 +1,60 @@
-name: build
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: Build and Release
+
+on:
+  push:
+    branches:
+      - '**'     # all branches
+    tags:
+      - 'v*.*.*' # version tags
+  pull_request:
+    branches:
+      - '**' 
+permissions:
+  contents: write
+
 jobs:
-  Explore-GitHub-Actions:
+  test-build-release:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository code
+      - name: Checkout repository
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - name: List files in the repository
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23.8'
+
+      - name: Run unit tests
         run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          cd client
+          make test
+        env:
+          CGO_ENABLED: 0
+
+      - name: Build server binary
+        run: |
+          PROGRAM_NAME=server make linux -f build.mk
+
+      - name: Build client binary
+        run: |
+          PROGRAM_NAME=client make linux_static -f build.mk
+          PROGRAM_NAME=client make windows -f build.mk
+
+      - name: List build outputs
+        run: |
+          ls -lh server/build/
+          ls -lh client/build/
+
+      - name: Create GitHub Release (only on tags)
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v2
+        with:
+          name: Release ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
+          files: |
+            server/build/server
+            client/build/client
+            client/build/client.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
