--- a/flutter_client/pubspec.yaml
+++ b/flutter_client/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
   english_words: ^4.0.0
+  fixnum: ^1.1.1
+  protobuf: ^4.1.0
+  grpc: ^4.1.0
+  uuid: ^4.4.2
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
