--- a/.github/workflows/.github-action.yaml
+++ b/.github/workflows/.github-action.yaml
@@ -25,6 +25,12 @@ jobs:
         with:
           go-version: '1.23.8'
 
+      - name: Set Up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.32.0'
+          channel: 'stable'
+
       - name: Run unit tests
         run: |
           cd client
@@ -32,19 +38,17 @@ jobs:
         env:
           CGO_ENABLED: 0
 
+      - name: Build client flutter binary
+        run: |
+          sudo apt-get install build-essential libgtk-3-dev
+          cd flutter_client
+          make linux
+
       - name: Build server binary
         run: |
           PROGRAM_NAME=server make linux_static -f build.mk
 
-      - name: Set Up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.32.0'
-          channel: 'stable'
-        run:
-          cd flutter_client
-          make linux
-
+    
 #      - name: Build client binary
 #        run: |
 #          PROGRAM_NAME=client make linux_static -f build.mk
@@ -53,7 +57,7 @@ jobs:
       - name: List build outputs
         run: |
           ls -lh server/build/
-          ls -lh client/build/
+          ls -lh flutter_client/build/linux/x64/release/bundle/meow
 
       - name: Create GitHub Release (only on tags)
         if: startsWith(github.ref, 'refs/tags/v')
@@ -65,6 +69,6 @@ jobs:
             server/build/server
             client/build/client
             client/build/client.exe
-            flutter_client/linux/x64/release/bundle/meow
+            flutter_client/build/linux/x64/release/bundle/meow
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
