--- a/flutter_client/pubspec.yaml
+++ b/flutter_client/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   grpc: ^4.1.0
   uuid: ^4.4.2
   get_it: ^8.0.3
+  pointycastle: ^3.6.2
+  convert: ^3.1.1
+  encrypt: ^5.0.3
+  cryptography: ^2.7.0
+  asn1lib: ^1.6.5
 
 dev_dependencies:
   flutter_test:
